--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,6 @@ jobs:
           python-version: 3.10.0
           
       - name: Test env vars for python
-        run: python -c "import os;print(os.environ['DEMO_SECRET'])"
+        run: python -c "import os;print(os.environ)"
         env:
           DEMO_SECRET: ${{ secrets.DEMO_SECRET}}
